@@ -32,7 +32,7 @@ public class XPathIndexOfFunc extends XPathFuncExpr {
 
         for(int i = 0 ; i < argList.length ; ++i) {
             if(argList[i].equals(indexedItem)) {
-                return new Double(i);
+                return Double.valueOf(i);
             }
         }
         return "";
